--- a/index.html
+++ b/index.html
@@ -1,8 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <meta charset="UTF-8">
+  <link href="style.css" rel="stylesheet" type="text/css">
+  <title>CV for RSSchool</title>
 </head>
 <body>
-
+<header>
+</header>
+<main>
+</main>
+<footer>
+</footer>
 </body>
 </html>
