feat: fill header, main and footer

--- a/index.html
+++ b/index.html
@@ -7,10 +7,66 @@
 </head>
 <body>
 <header>
+  <h1> Olga Tachko | JavaScript Developer </h1>
 </header>
 <main>
+  <div class="textcols">
+        <p class="col2"> Inspired beginning JavaScript Developer with a strong desire for professional development and a willingness to learn and master performance optimization skills. My strong qualities as the future programmer are quick learning ability, good time and task management, being a good team player and supreme communication skills.</p>
+        <ul class="col2"> 
+                <strong> Contacts: </strong>
+            <li> Phone: (375) 29-8239491 </li>
+            <li> Email: tochkoolga@gmail.com </li>
+            <li> Github: @Rasberry-girl </li>
+        </ul>
+        </div>
+        <h2> Key skills </h2>
+        <ul>
+            <li> Front End: </li>
+                <ul>
+                    <li> JavaScript </li>
+                    <li> HTML5, CSS3 </li>
+                </ul>
+            <li> Databases: </li>
+                <ul>
+                    <li> MySql </li>
+                </ul>
+            <li> CI/CD </li>
+                <ul>
+                    <li> Git </li>
+                </ul>
+        </ul>
+        <h2> Code example </h2> 
+    <pre><code>    function removeFirstOccurrences(str, value) { 
+    var str0 = str;
+    var word = value;
+    var index = str0.indexOf(word);
+        if (index === -1) {
+            return str0;
+            }
+    console.log (str0.slice(0, index) + str0.slice(index + word.length));
+    return str0.slice(0, index) + str0.slice(index + word.length); 
+                </code></pre>
+        <h2> Work history </h2>
+            <ul>
+                <li> Online courses in Rolling scopes school “JavaScript/Front-end. Stage 0” </li>
+                <li> Online Code-basics course “JavaScript” </li>
+                <li> Online Code-basics courses “HTML5”, “CSS3” </li>
+            </ul>
+        <h2> Education </h2>
+        <ul>
+            <li> The student of the Academy of Public Administration under the aegis of the President of the Republic of Belarus, Minsk. </li>
+        </ul>
+        <h2> Foreign languages </h2>
+        <ul>
+            <li> English language, level B2 </li>
+        </ul>
+
 </main>
 <footer>
+  <p> <mark> GitHub </mark>: <a href ="https://github.com/Rasberry-girl">https://github.com/Rasberry-girl</a></p>
+  <img src="https://rs.school/images/rs_school_js.svg" alt="JS course logo">
+  <a href="https://rs.school/js/"> <p> Link to the JS course </p> </a>
+  <p> 2021 </p>
 </footer>
 </body>
 </html>
