feat: add new functional
Add the picture, center the content, remove inactive code, optimize the code - add semantic tag article, position of elements in main

--- a/index.html
+++ b/index.html
@@ -1,39 +1,44 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <link href="style.css" rel="stylesheet" type="text/css">
-  <title>CV for RSSchool</title>
+    <meta charset="UTF-8">
+    <link href="style.css" rel="stylesheet" type="text/css">
+    <title>CV for RSSchool</title>
 </head>
-<body>
-<header>
-  <h1> Olga Tachko | JavaScript Developer </h1>
-</header>
-<main>
-  <div class="textcols">
+<body class="centering">
+    <header>
+        <h1> Olga Tochko | JavaScript Developer </h1>
+    </header>
+    <main>
+        <div class="textcols">
+        <img src="ava-image.jpg" alt="Avatar-photo" id="photo" class="col2">
         <p class="col2"> Inspired beginning JavaScript Developer with a strong desire for professional development and a willingness to learn and master performance optimization skills. My strong qualities as the future programmer are quick learning ability, good time and task management, being a good team player and supreme communication skills.</p>
         <ul class="col2"> 
-                <strong> Contacts: </strong>
+            <li id="nomarker"> Contacts: </li>
             <li> Phone: (375) 29-8239491 </li>
             <li> Email: tochkoolga@gmail.com </li>
             <li> Github: @Rasberry-girl </li>
         </ul>
         </div>
+        <article>
         <h2> Key skills </h2>
         <ul>
-            <li> Front End: </li>
+            <li> Front End:
                 <ul>
                     <li> JavaScript </li>
                     <li> HTML5, CSS3 </li>
                 </ul>
-            <li> Databases: </li>
+            </li>
+            <li> Databases:
                 <ul>
                     <li> MySql </li>
                 </ul>
-            <li> CI/CD </li>
+            </li>
+            <li> CI/CD
                 <ul>
                     <li> Git </li>
                 </ul>
+            </li>
         </ul>
         <h2> Code example </h2> 
     <pre><code>    function removeFirstOccurrences(str, value) { 
@@ -60,13 +65,13 @@
         <ul>
             <li> English language, level B2 </li>
         </ul>
-
-</main>
-<footer>
-  <p> <mark> GitHub </mark>: <a href ="https://github.com/Rasberry-girl">https://github.com/Rasberry-girl</a></p>
-  <img src="https://rs.school/images/rs_school_js.svg" alt="JS course logo">
-  <a href="https://rs.school/js/"> <p> Link to the JS course </p> </a>
-  <p> 2021 </p>
-</footer>
+        </article>
+    </main>
+    <footer>
+        <p> <mark> GitHub </mark>: <a href ="https://github.com/Rasberry-girl">https://github.com/Rasberry-girl</a></p>
+        <p> <mark> Link to the JS course </mark>: <a href ="https://rs.school/js/">https://rs.school/js/</a></p>
+        <img src="https://rs.school/images/rs_school_js.svg" alt="JS course logo" class="footer">
+        <p class="footer"> 2021 </p>
+    </footer>
 </body>
 </html>
