feat: add main content

--- a/index.html
+++ b/index.html
@@ -11,6 +11,68 @@
     <header>
         <h1> Olga Tochko | JavaScript Developer </h1>
     </header>
+    <main>
+        <section>
+            <img src="ava-image.jpg" alt="Avatar-photo">
+            <p> Inspired beginning JavaScript Developer with a strong desire for professional development
+                and a willingness to learn and master performance optimization skills. My strong qualities as the future
+                programmer are quick learning ability, good time and task management, being a good team player and
+                supreme communication skills.</p>
+            <ul>
+                <li> Contacts: </li>
+                <li> Phone: (375) 29-8239491 </li>
+                <li> Email: tochkoolga@gmail.com </li>
+                <li> Github: @Rasberry-girl </li>
+            </ul>
+        </section>
+        <section>
+            <h2> Key skills </h2>
+            <ul>
+                <li> Front End:
+                    <ul>
+                        <li> JavaScript </li>
+                        <li> HTML5, CSS3 </li>
+                    </ul>
+                </li>
+                <li> Databases:
+                    <ul>
+                        <li> MySql </li>
+                    </ul>
+                </li>
+                <li> CI/CD
+                    <ul>
+                        <li> Git </li>
+                    </ul>
+                </li>
+            </ul>
+            <h2> Code example </h2>
+            <pre><code>    function removeFirstOccurrences(str, value) { 
+    var str0 = str;
+    var word = value;
+    var index = str0.indexOf(word);
+        if (index === -1) {
+            return str0;
+            }
+    console.log (str0.slice(0, index) + str0.slice(index + word.length));
+    return str0.slice(0, index) + str0.slice(index + word.length); 
+                </code></pre>
+            <h2> Work history </h2>
+            <ul>
+                <li> Online courses in Rolling scopes school “JavaScript/Front-end. Stage 0” </li>
+                <li> Online Code-basics course “JavaScript” </li>
+                <li> Online Code-basics courses “HTML5”, “CSS3” </li>
+            </ul>
+            <h2> Education </h2>
+            <ul>
+                <li> The student of the Academy of Public Administration under the aegis of the President of the
+                    Republic of Belarus, Minsk. </li>
+            </ul>
+            <h2> Foreign languages </h2>
+            <ul>
+                <li> English language, level B2 </li>
+            </ul>
+        </section>
+    </main>
 </body>
 
 </html>
