feat: add footer and styles

--- a/index.html
+++ b/index.html
@@ -7,19 +7,19 @@
     <title>CV for RSSchool</title>
 </head>
 
-<body>
+<body class="centering">
     <header>
         <h1> Olga Tochko | JavaScript Developer </h1>
     </header>
     <main>
-        <section>
-            <img src="ava-image.jpg" alt="Avatar-photo">
-            <p> Inspired beginning JavaScript Developer with a strong desire for professional development
+        <section class="textcols">
+            <img src="ava-image.jpg" alt="Avatar-photo" id="photo" class="col2">
+            <p class="col2"> Inspired beginning JavaScript Developer with a strong desire for professional development
                 and a willingness to learn and master performance optimization skills. My strong qualities as the future
                 programmer are quick learning ability, good time and task management, being a good team player and
                 supreme communication skills.</p>
-            <ul>
-                <li> Contacts: </li>
+            <ul class="col2">
+                <li id="nomarker"> Contacts: </li>
                 <li> Phone: (375) 29-8239491 </li>
                 <li> Email: tochkoolga@gmail.com </li>
                 <li> Github: @Rasberry-girl </li>
@@ -73,6 +73,12 @@
             </ul>
         </section>
     </main>
+    <footer>
+        <p> <mark> GitHub </mark>: <a href="https://github.com/Rasberry-girl">https://github.com/Rasberry-girl</a></p>
+        <p> <mark> Link to the JS course </mark>: <a href="https://rs.school/js/">https://rs.school/js/</a></p>
+        <img src="https://rs.school/images/rs_school_js.svg" alt="JS course logo" class="footer">
+        <p class="footer"> 2021 </p>
+    </footer>
 </body>
 
 </html>
