feat: format files, add header

--- a/index.html
+++ b/index.html
@@ -1,52 +1,58 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <link href="style.css" rel="stylesheet" type="text/css">
+  <head>
+    <meta charset="UTF-8" />
+    <link href="style.css" rel="stylesheet" type="text/css" />
     <title>CV for RSSchool</title>
-</head>
+  </head>
 
-<body class="centering">
+  <body class="centering">
     <header>
-        <h1> Olga Tochko | JavaScript Developer </h1>
+      <h1>Olga Tochko | JavaScript Developer</h1>
     </header>
     <main>
-        <section class="textcols">
-            <img src="ava-image.jpg" alt="Avatar-photo" id="photo" class="col2">
-            <p class="col2"> Inspired beginning JavaScript Developer with a strong desire for professional development
-                and a willingness to learn and master performance optimization skills. My strong qualities as the future
-                programmer are quick learning ability, good time and task management, being a good team player and
-                supreme communication skills.</p>
-            <ul class="col2">
-                <li id="nomarker"> Contacts: </li>
-                <li> Phone: (375) 29-8239491 </li>
-                <li> Email: tochkoolga@gmail.com </li>
-                <li> Github: @Rasberry-girl </li>
-            </ul>
-        </section>
-        <section>
-            <h2> Key skills </h2>
+      <section class="textcols">
+        <h2 class="info">Info</h2>
+        <img src="ava-image.jpg" alt="Avatar-photo" id="photo" class="col2" />
+        <p class="col2">
+          Inspired beginning JavaScript Developer with a strong desire for
+          professional development and a willingness to learn and master
+          performance optimization skills. My strong qualities as the future
+          programmer are quick learning ability, good time and task management,
+          being a good team player and supreme communication skills.
+        </p>
+        <ul class="col2">
+          <li id="nomarker">Contacts:</li>
+          <li>Phone: (375) 29-8239491</li>
+          <li>Email: tochkoolga@gmail.com</li>
+          <li>Github: @Rasberry-girl</li>
+        </ul>
+      </section>
+      <section>
+        <h2>Key skills</h2>
+        <ul>
+          <li>
+            Front End:
             <ul>
-                <li> Front End:
-                    <ul>
-                        <li> JavaScript </li>
-                        <li> HTML5, CSS3 </li>
-                    </ul>
-                </li>
-                <li> Databases:
-                    <ul>
-                        <li> MySql </li>
-                    </ul>
-                </li>
-                <li> CI/CD
-                    <ul>
-                        <li> Git </li>
-                    </ul>
-                </li>
+              <li>JavaScript</li>
+              <li>HTML5, CSS3</li>
             </ul>
-            <h2> Code example </h2>
-            <pre><code>    function removeFirstOccurrences(str, value) { 
+          </li>
+          <li>
+            Databases:
+            <ul>
+              <li>MySql</li>
+            </ul>
+          </li>
+          <li>
+            CI/CD
+            <ul>
+              <li>Git</li>
+            </ul>
+          </li>
+        </ul>
+        <h2>Code example</h2>
+        <pre><code>    function removeFirstOccurrences(str, value) { 
     var str0 = str;
     var word = value;
     var index = str0.indexOf(word);
@@ -56,29 +62,45 @@
     console.log (str0.slice(0, index) + str0.slice(index + word.length));
     return str0.slice(0, index) + str0.slice(index + word.length); 
                 </code></pre>
-            <h2> Work history </h2>
-            <ul>
-                <li> Online courses in Rolling scopes school “JavaScript/Front-end. Stage 0” </li>
-                <li> Online Code-basics course “JavaScript” </li>
-                <li> Online Code-basics courses “HTML5”, “CSS3” </li>
-            </ul>
-            <h2> Education </h2>
-            <ul>
-                <li> The student of the Academy of Public Administration under the aegis of the President of the
-                    Republic of Belarus, Minsk. </li>
-            </ul>
-            <h2> Foreign languages </h2>
-            <ul>
-                <li> English language, level B2 </li>
-            </ul>
-        </section>
+        <h2>Work history</h2>
+        <ul>
+          <li>
+            Online courses in Rolling scopes school “JavaScript/Front-end. Stage
+            0”
+          </li>
+          <li>Online Code-basics course “JavaScript”</li>
+          <li>Online Code-basics courses “HTML5”, “CSS3”</li>
+        </ul>
+        <h2>Education</h2>
+        <ul>
+          <li>
+            The student of the Academy of Public Administration under the aegis
+            of the President of the Republic of Belarus, Minsk.
+          </li>
+        </ul>
+        <h2>Foreign languages</h2>
+        <ul>
+          <li>English language, level B2</li>
+        </ul>
+      </section>
     </main>
     <footer>
-        <p> <mark> GitHub </mark>: <a href="https://github.com/Rasberry-girl">https://github.com/Rasberry-girl</a></p>
-        <p> <mark> Link to the JS course </mark>: <a href="https://rs.school/js/">https://rs.school/js/</a></p>
-        <img src="https://rs.school/images/rs_school_js.svg" alt="JS course logo" class="footer">
-        <p class="footer"> 2021 </p>
+      <p>
+        <mark> GitHub </mark>:
+        <a href="https://github.com/Rasberry-girl"
+          >https://github.com/Rasberry-girl</a
+        >
+      </p>
+      <p>
+        <mark> Link to the JS course </mark>:
+        <a href="https://rs.school/js/">https://rs.school/js/</a>
+      </p>
+      <img
+        src="https://rs.school/images/rs_school_js.svg"
+        alt="JS course logo"
+        class="footer"
+      />
+      <p class="footer">2021</p>
     </footer>
-</body>
-
+  </body>
 </html>
